--- a/app/src/main/res/layout/fragment_add_details.xml
+++ b/app/src/main/res/layout/fragment_add_details.xml
@@ -1,177 +1,179 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:padding="16dp">
 
-    <LinearLayout
-        android:id="@+id/header"
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:layout_alignParentTop="true"
-        android:layout_marginBottom="16dp">
+        android:layout_height="wrap_content">
 
-        <TextView
-            android:layout_width="0dp"
+        <LinearLayout
+            android:id="@+id/header"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="소비/지출 내역 추가하기"
+            android:orientation="horizontal"
+            android:layout_alignParentTop="true"
+            android:layout_marginBottom="16dp">
+
+            <TextView
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="소비/지출 내역 추가하기"
+                android:textSize="18sp"
+                android:textStyle="bold" />
+
+        </LinearLayout>
+
+        <EditText
+            android:id="@+id/et_price"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/header"
+            android:hint="금액 입력" />
+
+        <!-- 분류 라벨 추가 -->
+        <TextView
+            android:id="@+id/tv_category_label"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/et_price"
+            android:layout_marginTop="16dp"
+            android:text="분류"
             android:textSize="18sp"
             android:textStyle="bold" />
 
-    </LinearLayout>
+        <RadioGroup
+            android:id="@+id/rg_payment_method"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/tv_category_label"
+            android:layout_marginTop="8dp">
 
-    <EditText
-        android:id="@+id/et_price"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/header"
-        android:hint="금액 입력" />
+            <RadioButton
+                android:id="@+id/rb_card"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="수입" />
 
-    <!-- 분류 라벨 추가 -->
-    <TextView
-        android:id="@+id/tv_category_label"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/et_price"
-        android:layout_marginTop="16dp"
-        android:text="분류"
-        android:textSize="18sp"
-        android:textStyle="bold" />
+            <RadioButton
+                android:id="@+id/rb_account"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="지출" />
 
-    <RadioGroup
-        android:id="@+id/rg_payment_method"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/tv_category_label"
-        android:layout_marginTop="8dp">
+            <RadioButton
+                android:id="@+id/rb_cash"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="이체" />
+        </RadioGroup>
 
-        <RadioButton
-            android:id="@+id/rb_card"
+        <!-- 카테고리 -->
+        <TextView
+            android:id="@+id/tv_spinner_category_label"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="수입" />
+            android:layout_below="@id/rg_payment_method"
+            android:layout_marginTop="16dp"
+            android:text="카테고리"
+            android:textSize="16sp"
+            android:textStyle="bold" />
 
-        <RadioButton
-            android:id="@+id/rb_account"
+        <Spinner
+            android:id="@+id/spinner_category"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/tv_spinner_category_label"
+            android:layout_marginTop="8dp" />
+
+        <!-- 결제수단 -->
+        <TextView
+            android:id="@+id/tv_spinner_payment_method_label"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="지출" />
+            android:layout_below="@id/spinner_category"
+            android:layout_marginTop="16dp"
+            android:text="결제수단"
+            android:textSize="16sp"
+            android:textStyle="bold" />
 
-        <RadioButton
-            android:id="@+id/rb_cash"
+        <Spinner
+            android:id="@+id/spinner_payment_method"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/tv_spinner_payment_method_label"
+            android:layout_marginTop="8dp" />
+
+        <!-- 가계부 종류 -->
+        <TextView
+            android:id="@+id/tv_spinner_ledger_type_label"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="이체" />
-    </RadioGroup>
+            android:layout_below="@id/spinner_payment_method"
+            android:layout_marginTop="16dp"
+            android:text="가계부 종류"
+            android:textSize="16sp"
+            android:textStyle="bold" />
 
-    <!-- 카테고리 -->
-    <TextView
-        android:id="@+id/tv_spinner_category_label"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/rg_payment_method"
-        android:layout_marginTop="16dp"
-        android:text="카테고리"
-        android:textSize="16sp"
-        android:textStyle="bold" />
+        <Spinner
+            android:id="@+id/spinner_ledger_type"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/tv_spinner_ledger_type_label"
+            android:layout_marginTop="8dp" />
 
-    <Spinner
-        android:id="@+id/spinner_category"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/tv_spinner_category_label"
-        android:layout_marginTop="8dp"
-        android:entries="@array/categories" />
+        <TextView
+            android:id="@+id/tv_date"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/spinner_ledger_type"
+            android:layout_marginTop="16dp"
+            android:text="날짜"
+            android:textSize="18sp"
+            android:textStyle="bold" />
 
-    <!-- 결제수단 -->
-    <TextView
-        android:id="@+id/tv_spinner_payment_method_label"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/spinner_category"
-        android:layout_marginTop="16dp"
-        android:text="결제수단"
-        android:textSize="16sp"
-        android:textStyle="bold" />
+        <TextView
+            android:id="@+id/tv_date_value"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/tv_date"
+            android:layout_marginTop="8dp"
+            android:text="2023년 5월 1일" />
 
-    <Spinner
-        android:id="@+id/spinner_payment_method"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/tv_spinner_payment_method_label"
-        android:layout_marginTop="8dp"
-        android:entries="@array/payment_methods" />
+        <EditText
+            android:id="@+id/et_memo"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/tv_date_value"
+            android:layout_marginTop="16dp"
+            android:hint="메모 입력" />
 
-    <!-- 가계부 종류 -->
-    <TextView
-        android:id="@+id/tv_spinner_ledger_type_label"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/spinner_payment_method"
-        android:layout_marginTop="16dp"
-        android:text="가계부 종류"
-        android:textSize="16sp"
-        android:textStyle="bold" />
+        <TextView
+            android:id="@+id/tv_transaction"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/et_memo"
+            android:layout_marginTop="16dp"
+            android:text="거래처"
+            android:textSize="18sp"
+            android:textStyle="bold" />
 
-    <Spinner
-        android:id="@+id/spinner_ledger_type"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/tv_spinner_ledger_type_label"
-        android:layout_marginTop="8dp"
-        android:entries="@array/ledger_types" />
+        <TextView
+            android:id="@+id/tv_transaction_value"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/tv_transaction"
+            android:layout_marginTop="8dp"
+            android:text="카페 OO" />
 
-    <TextView
-        android:id="@+id/tv_date"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/spinner_ledger_type"
-        android:layout_marginTop="16dp"
-        android:text="날짜"
-        android:textSize="18sp"
-        android:textStyle="bold" />
-
-    <TextView
-        android:id="@+id/tv_date_value"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/tv_date"
-        android:layout_marginTop="8dp"
-        android:text="2023년 5월 1일" />
-
-    <EditText
-        android:id="@+id/et_memo"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/tv_date_value"
-        android:layout_marginTop="16dp"
-        android:hint="메모 입력" />
-
-    <TextView
-        android:id="@+id/tv_transaction"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/et_memo"
-        android:layout_marginTop="16dp"
-        android:text="거래처"
-        android:textSize="18sp"
-        android:textStyle="bold" />
-
-    <TextView
-        android:id="@+id/tv_transaction_value"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/tv_transaction"
-        android:layout_marginTop="8dp"
-        android:text="카페 OO" />
-
-    <Button
-        android:id="@+id/btn_save"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:text="저장"
-        android:textColor="@android:color/white" />
-
-</RelativeLayout>
+        <Button
+            android:id="@+id/btn_save"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/tv_transaction_value"
+            android:layout_marginTop="16dp"
+            android:text="저장"
+            android:textColor="@android:color/white" />
+    </RelativeLayout>
+</ScrollView>
